[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/gracie.webp" type="Texture" id=1]
[ext_resource path="res://objects/dog.gd" type="Script" id=2]
[ext_resource path="res://sprites/frisbee.webp" type="Texture" id=3]
[ext_resource path="res://hud.tscn" type="PackedScene" id=4]
[ext_resource path="res://health.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 7 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 12, 7 )

[node name="dog" type="KinematicBody2D"]
z_index = 2
collision_layer = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 1 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -16, -24 )

[node name="frisbee_sprite" type="Sprite" parent="Sprite"]
unique_name_in_owner = true
visible = false
show_behind_parent = true
position = Vector2( 13, -9 )
texture = ExtResource( 3 )

[node name="grab_area" type="Area2D" parent="Sprite"]
unique_name_in_owner = true
position = Vector2( 13, -9 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/grab_area"]
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -7 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -8 )
current = true

[node name="hud" parent="." instance=ExtResource( 4 )]

[node name="health" type="Node" parent="."]
script = ExtResource( 5 )

[node name="ow_area" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ow_area"]
position = Vector2( 0, -7 )
shape = SubResource( 3 )

[connection signal="health_changed" from="health" to="hud" method="update"]
